fix overflow & remove vertical scroll by setting 100% max-width / fix width issues in other elements / remove html duplicate element

--- a/css/style.css
+++ b/css/style.css
@@ -8,26 +8,24 @@
 
 html {
   font-size: 62.5%;
-}
-
-html {
   font-family: 'Ubuntu', sans-serif;
   background-color: aliceblue;
 }
 
 .navigation {
-  font-size: 2rem;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  font-size: 2rem;
   width: 100vw;
+  max-width: 100%;
   height: 2rem;
   padding: 1.5rem;
   margin-top: .5rem;
 }
 
 .logo {
-  width: 90vw;
+  width: 95vw;
   margin-left: .5rem;
   color: #5bacc3;
 }
@@ -59,8 +57,6 @@ a:hover {
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
-
-.header__main-content {}
 
 .header img {
   margin-top: 15vh;
@@ -99,7 +95,7 @@ i:hover {
   color: black;
   background-color: rgb(240, 248, 255, .90);
   box-shadow: 0 .2rem .2rem .2rem;
-  width: 17vw;
+  /* width: 17vw; */
   border-radius: .5rem;
 }
 
@@ -182,8 +178,8 @@ i:hover {
 
 hr {
   /* border: none; */
-  /* background-color: #5bacc3; */
-  border-style: dotted;
+  background-color: #5bacc3;
+  /* border-style: dotted; */
   height: 1px;
 }
 
